@@ -1,3 +1,8 @@
+2016-12-18  Jérôme Pasquier  <rainbru@free.fr>
+
+	* src/client/GameEngine.cpp (initialiseCegui): move the try/catch
+	of the font exception into TempMessage.cpp.
+
 2016-12-14  Jérôme Pasquier  <rainbru@free.fr>
 
 	* media/cegui-orig/fonts.zip: add media/fonts filesystem.
